--- a/stayle.css
+++ b/stayle.css
@@ -62,7 +62,7 @@ footer.container-fluid{
 }
 .img-living{
     width: 100%;
-    height: 600px;
+    height:auto;
     padding-top:100px;
 }
 @media(max-width:800px){
