--- a/stayle.css
+++ b/stayle.css
@@ -61,8 +61,8 @@ footer.container-fluid{
     padding-left: 25px;
 }
 .img-living{
-    width: 100%;
-    height:auto;
+    width:100%;
+    height:100%;
     padding-top:100px;
 }
 @media(max-width:800px){
